--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "license": "MIT",
   "peerDependencies": {
     "leaflet": "^1.7.1",
-    "react-leaflet": "^1.9.1 || 2.2.0"
+    "react-leaflet": "^3.2.2"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.2.5",
